Reworks the IconChooser widget. Dramatic performance improvements: it uses about 1/30 of the Javascript of the previous version. It also fixes the selections, so the initialization and execution is visibly faster.

--- a/admin/static/css/cherokee-admin.css
+++ b/admin/static/css/cherokee-admin.css
@@ -49,7 +49,7 @@
 
 /* Icon Chooser
  */
-img.icon_chooser {
+img.icon_chooser_entry {
 	padding: 5px;
 	margin: 5px;
 	border: 1px solid #ccc;
